# Live_ESG

./: .gitignore  all_pollution_data.json  environment.py  fetchingDashboard.py  jsonToPandas.py  liveData.py  livelinksDB.py  mongo.py  nift50.txt  recordsLinksDB.py  requirements.txt
esg/scripts/: .env.example  CLEANUP_README.md  E2E_TEST_README.md  README.md  cleanup_pipeline_data.py  cleanup_sample_data.py  example_e2e_test.sh  pipeline_config.py  pipeline_orchestrator.py  publish_extraction_tasks.py  pyproject.toml  test_config.py  test_pipeline_e2e.py  trigger_extraction.py  verify_extraction_service.sh
esg/services/airflow/: .env.example  ARCHITECTURE_COMPARISON.md  Dockerfile  README.md  pyproject.toml  requirements.txt
esg/services/airflow/dags/: esg_pipeline_dag.py
esg/services/airflow/logs/: .gitkeep
esg/services/airflow/plugins/: .gitkeep
esg/services/api-gateway/: .env.example  .gitignore  AUTHENTICATION_CHANGES.md  CACHING.md  Dockerfile  ENDPOINT_AUTHENTICATION_STATUS.md  README.md  pyproject.toml
esg/services/api-gateway/examples/: README.md  demo_cache.py
esg/services/api-gateway/src/: __init__.py  cache.py  config.py  main.py
esg/services/api-gateway/tests/: README.md  test_auth.py  test_cache.py  test_citations_endpoints.py  test_companies_endpoints.py  test_db_setup.py  test_indicators_endpoints.py  test_public_endpoints.py  test_reports_endpoints.py  test_scores_endpoints.py
esg/services/company-catalog/: README.md  dockerfile  pyproject.toml
esg/services/company-catalog/src/: main.py
esg/services/embeddings/: README.md  dockerfile  pyproject.toml
esg/services/embeddings/src/: batch_processor.py  config.py  db.py  embedder.py  extractor.py  main.py  splitter.py  test.py  utils.py  worker.py
esg/services/extraction/: .env.example  BATCH_EXTRACTION_IMPLEMENTATION.md  Dockerfile  E2E_TEST_README.md  ERROR_HANDLING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  README.md  TASK_48_SUMMARY.md  VALIDATION_IMPLEMENTATION.md  main.py  pyproject.toml
esg/services/extraction/examples/: README.md  example_batch_usage.py  example_esg_scoring.py  example_pillar_scoring.py  example_validation_usage.py  trigger_extraction.py
esg/services/extraction/src/: __init__.py  batch_extractor.py  config.py
esg/services/extraction/tests/: README.md  test_e2e_extraction.py  test_e2e_structure.py  test_esg_calculator.py  test_extraction_chain.py  test_extraction_chain_simple.py  test_extraction_prompts.py  test_extractor.py  test_extractor_batch.py  test_filtered_retriever.py  test_http_server.py  test_main_worker.py  test_monitoring.py  test_pillar_calculator.py  test_repository.py  test_retriever_structure.py  test_validator.py
esg/services/ingestion/: README.md  dockerfile  dockerfile.base  isitdoneyet.json  pyproject.toml
esg/services/ingestion/links/: ADANIENT_Adani_Enterprises_Limited..txt  ADANIPORTS_Adani_Ports_and_Special_Economic_Zone_Limited..txt  APOLLOHOSP_Apollo_Hospitals_Enterprise_Limited..txt  ASIANPAINT_Asian_Paints_Limited..txt  AXISBANK_Axis_Bank_Limited..txt  BAJAJ-AUTO_Bajaj_Auto_Limited..txt  BAJAJFINSV_Bajaj_Finserv_Limited..txt  BAJFINANCE_Bajaj_Finance_Limited..txt  BEL_Bharat_Electronics_Limited..txt  BHARTIARTL_Bharti_Airtel_Limited..txt  CIPLA_Cipla_Limited..txt  COALINDIA_Coal_India_Limited..txt  DRREDDY_Dr._Reddy's_Laboratories_Limited..txt  EICHERMOT_Eicher_Motors_Limited..txt  ETERNAL_Eternal_Limited..txt  GRASIM_Grasim_Industries_Limited..txt  HCLTECH_HCL_Technologies_Limited..txt  HDFCBANK_HDFC_Bank_Limited..txt  HDFCLIFE_HDFC_Life_Insurance_Company_Limited..txt  HINDALCO_Hindalco_Industries_Limited..txt  HINDUNILVR_Hindustan_Unilever_Limited..txt  ICICIBANK_ICICI_Bank_Limited..txt  INDIGO_InterGlobe_Aviation_Limited..txt  INFY_Infosys_Limited..txt  ITC_ITC_Limited..txt  JIOFIN_Jio_Financial_Services_Limited..txt  JSWSTEEL_JSW_Steel_Limited..txt  KOTAKBANK_Kotak_Mahindra_Bank_Limited..txt  LT_Larsen_&_Toubro_Limited..txt  MARUTI_Maruti_Suzuki_India_Limited..txt  NTPC_NTPC_Limited..txt  (+18 more)
esg/tests/: README.md  __init__.py  conftest.py  health_check.sh  pyproject.toml  run_integration_tests.sh  run_tests.sh
esg/tests/fixtures/: README.md  sample_data.py
esg/tests/integration/: __init__.py  test_api_gateway.py  test_database.py  test_frontend.py  test_pipeline.py  test_services.py
esg/tests/utils/: README.md  __init__.py  api_utils.py  db_utils.py  generate_test_api_key.py
(+370 files in other folders)
