[project]
name = "esg-scripts"
version = "0.1.0"
description = "ESG Platform utility scripts"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "pika>=1.3.2",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
