[project]
name = "esg-integration-tests"
version = "0.1.0"
description = "Integration tests for ESG Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "minio>=7.1.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["integration", "fixtures", "utils"]

[tool.pytest.ini_options]
testpaths = ["integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
