[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for ESG Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.60",
    "email-validator>=2.3.0",
    "fastapi>=0.120.0",
    "passlib>=1.7.4",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
