[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.43",
    "botocore>=1.40.43",
    "minio>=7.2.18",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "selenium-stealth>=1.0.6",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
